Fix code block font too thin on mobile device

--- a/source/its-compiling/_sass/_its-compiling.scss
+++ b/source/its-compiling/_sass/_its-compiling.scss
@@ -158,6 +158,13 @@ hr {
     @include border-radius(0.25em 0.25em 0 0);
     @include box-shadow(inset 0 0 0 1px darken(white, 15%));
   }
+
+  figcaption, pre {
+    font-weight: bold;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+  }
 }
 
 .figure-quote {
